Update product prices and descriptions

--- a/Index.html
+++ b/Index.html
@@ -728,8 +728,8 @@
         <img src="images/carpet1.jpg" alt="3D Center Carpet">
         <div class="product-info">
           <h3>3D Center Carpet</h3>
-          <div class="product-size">Size: 5x7 ft</div>
-          <div class="product-price">GH₵ 450</div>
+          <div class="product-size">Size: 140x200 cm</div>
+          <div class="product-price">GH₵ 290</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (128 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -739,7 +739,7 @@
           </div>
           <p>Soft and elegant design for your living room.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the 3D Center Carpet (5x7 ft) - GH₵ 450" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the 3D Center Carpet (140x200 cm) - GH₵ 290" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn" onclick="alert('Quick View coming soon!')">Quick View</button>
           </div>
         </div>
@@ -750,8 +750,8 @@
         <img src="images/carpet2.jpg" alt="Fluffy Carpet">
         <div class="product-info">
           <h3>Fluffy Carpet</h3>
-          <div class="product-size">Size: 6x9 ft</div>
-          <div class="product-price">GH₵ 580</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (95 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -760,7 +760,7 @@
           </div>
           <p>Cozy comfort that adds warmth to your home.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Fluffy Carpet (6x9 ft) - GH₵ 580" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Fluffy Carpet (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -772,8 +772,8 @@
         <img src="images/carpet3.jpg" alt="Luxury Design">
         <div class="product-info">
           <h3>Luxury Design</h3>
-          <div class="product-size">Size: 8x10 ft</div>
-          <div class="product-price">GH₵ 750</div>
+          <div class="product-size">Size: 200x300 cm</div>
+          <div class="product-price">GH₵ 550</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (87 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -782,7 +782,7 @@
           </div>
           <p>Perfect blend of class and comfort.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Luxury Design (8x10 ft) - GH₵ 750" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Luxury Design (200x300 cm) - GH₵ 550" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -794,13 +794,13 @@
         <img src="images/carpet4.jpg" alt="Modern Pattern">
         <div class="product-info">
           <h3>Modern Pattern</h3>
-          <div class="product-size">Size: 5x7 ft</div>
-          <div class="product-price">GH₵ 420</div>
+          <div class="product-size">Size: 140x200 cm</div>
+          <div class="product-price">GH₵ 290</div>
           <div class="product-rating">⭐⭐⭐⭐ (64 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <p>Contemporary style meets ultimate comfort.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Modern Pattern (5x7 ft) - GH₵ 420" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Modern Pattern (140x200 cm) - GH₵ 290" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1284,8 +1284,8 @@
         <img src="images/carpet27.jpg" alt="Contemporary Mix">
         <div class="product-info">
           <h3>Contemporary Mix</h3>
-          <div class="product-size">Size: 6x8 ft</div>
-          <div class="product-price">GH₵ 525</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐ (58 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1294,7 +1294,7 @@
           </div>
           <p>Blend of modern and traditional styles.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Contemporary Mix (6x8 ft) - GH₵ 525" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Contemporary Mix (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1305,8 +1305,8 @@
         <img src="images/carpet28.jpg" alt="Soft Touch">
         <div class="product-info">
           <h3>Soft Touch</h3>
-          <div class="product-size">Size: 5x7 ft</div>
-          <div class="product-price">GH₵ 440</div>
+          <div class="product-size">Size: 140x200 cm</div>
+          <div class="product-price">GH₵ 190</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (93 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1315,7 +1315,7 @@
           </div>
           <p>Ultra-soft for barefoot comfort.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Soft Touch (5x7 ft) - GH₵ 440" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Soft Touch (140x200) - GH₵ 290" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1326,8 +1326,8 @@
         <img src="images/carpet29.jpg" alt="Stripe Design">
         <div class="product-info">
           <h3>Stripe Design</h3>
-          <div class="product-size">Size: 6x9 ft</div>
-          <div class="product-price">GH₵ 570</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐ (65 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1336,7 +1336,7 @@
           </div>
           <p>Clean lines for organized aesthetics.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Stripe Design (6x9 ft) - GH₵ 570" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Stripe Design (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1348,8 +1348,8 @@
         <img src="images/carpet30.jpg" alt="Moroccan Style">
         <div class="product-info">
           <h3>Moroccan Style</h3>
-          <div class="product-size">Size: 8x10 ft</div>
-          <div class="product-price">GH₵ 795</div>
+          <div class="product-size">Size: 200x300 cm</div>
+          <div class="product-price">GH₵ 550</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (167 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1358,7 +1358,7 @@
           </div>
           <p>Exotic patterns for bohemian vibes.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Moroccan Style (8x10 ft) - GH₵ 795" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Moroccan Style (230x160 cm) - GH₵ 550" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1369,8 +1369,8 @@
         <img src="images/carpet31.jpg" alt="Scandinavian Look">
         <div class="product-info">
           <h3>Scandinavian Look</h3>
-          <div class="product-size">Size: 5x8 ft</div>
-          <div class="product-price">GH₵ 485</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐ (52 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1379,7 +1379,7 @@
           </div>
           <p>Nordic simplicity and functionality.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Scandinavian Look (5x8 ft) - GH₵ 485" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Scandinavian Look (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1391,8 +1391,8 @@
         <img src="images/carpet32.jpg" alt="Luxury Suite">
         <div class="product-info">
           <h3>Luxury Suite</h3>
-          <div class="product-size">Size: 9x12 ft</div>
-          <div class="product-price">GH₵ 950</div>
+          <div class="product-size">Size: 200x300 cm</div>
+          <div class="product-price">GH₵ 550</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (101 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1401,7 +1401,7 @@
           </div>
           <p>Five-star hotel quality for your home.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Luxury Suite (9x12 ft) - GH₵ 950" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Luxury Suite (200x300 cm) - GH₵ 550" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1412,8 +1412,8 @@
         <img src="images/carpet33.jpg" alt="Office Professional">
         <div class="product-info">
           <h3>Office Professional</h3>
-          <div class="product-size">Size: 6x8 ft</div>
-          <div class="product-price">GH₵ 505</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐ (68 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1422,7 +1422,7 @@
           </div>
           <p>Sophisticated style for work spaces.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Office Professional (6x8 ft) - GH₵ 505" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Office Professional (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1434,8 +1434,8 @@
         <img src="images/carpet34.jpg" alt="Spa Relaxation">
         <div class="product-info">
           <h3>Spa Relaxation</h3>
-          <div class="product-size">Size: 5x7 ft</div>
-          <div class="product-price">GH₵ 455</div>
+          <div class="product-size">Size: 140x200 cm</div>
+          <div class="product-price">GH₵ 290</div>
           <div class="product-rating">⭐⭐⭐⭐ (44 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1444,7 +1444,7 @@
           </div>
           <p>Soothing tones for peaceful areas.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Spa Relaxation (5x7 ft) - GH₵ 455" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Spa Relaxation (140x200 cm) - GH₵ 290" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1454,8 +1454,8 @@
         <img src="images/carpet35.jpg" alt="Festive Special">
         <div class="product-info">
           <h3>Festive Special</h3>
-          <div class="product-size">Size: 6x9 ft</div>
-          <div class="product-price">GH₵ 585</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 230 </div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (79 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1464,7 +1464,7 @@
           </div>
           <p>Seasonal colors for celebrations.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Festive Special (6x9 ft) - GH₵ 585" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Festive Special (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1476,8 +1476,8 @@
         <img src="images/carpet36.jpg" alt="Eco Friendly">
         <div class="product-info">
           <h3>Eco Friendly</h3>
-          <div class="product-size">Size: 7x10 ft</div>
-          <div class="product-price">GH₵ 695</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐ (36 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1486,7 +1486,7 @@
           </div>
           <p>Sustainable materials for green living.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Eco Friendly (7x10 ft) - GH₵ 695" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Eco Friendly (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1497,8 +1497,8 @@
         <img src="images/carpet37.jpg" alt="Waterproof Base">
         <div class="product-info">
           <h3>Waterproof Base</h3>
-          <div class="product-size">Size: 5x8 ft</div>
-          <div class="product-price">GH₵ 495</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (88 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1507,7 +1507,7 @@
           </div>
           <p>Protected backing for easy maintenance.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Waterproof Base (5x8 ft) - GH₵ 495" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Waterproof Base (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1519,8 +1519,8 @@
         <img src="images/carpet38.jpg" alt="Anti-Slip Design">
         <div class="product-info">
           <h3>Anti-Slip Design</h3>
-          <div class="product-size">Size: 6x8 ft</div>
-          <div class="product-price">GH₵ 515</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐⭐ (152 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1529,7 +1529,7 @@
           </div>
           <p>Safety features for family peace of mind.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Anti-Slip Design (6x8 ft) - GH₵ 515" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Anti-Slip Design (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1540,8 +1540,8 @@
         <img src="images/carpet39.jpg" alt="Heat Resistant">
         <div class="product-info">
           <h3>Heat Resistant</h3>
-          <div class="product-size">Size: 7x9 ft</div>
-          <div class="product-price">GH₵ 635</div>
+          <div class="product-size">Size: 230x160 cm</div>
+          <div class="product-price">GH₵ 350</div>
           <div class="product-rating">⭐⭐⭐⭐ (74 reviews)</div>
           <div class="product-stock">✓ In Stock</div>
           <div class="product-colors">
@@ -1550,7 +1550,7 @@
           </div>
           <p>Perfect for high-traffic areas.</p>
           <div class="product-actions">
-            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Heat Resistant (7x9 ft) - GH₵ 635" class="whatsapp-order-btn">Order Now</a>
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Heat Resistant (230x160 cm) - GH₵ 350" class="whatsapp-order-btn">Order Now</a>
             <button class="quick-view-btn">Quick View</button>
           </div>
         </div>
@@ -1770,6 +1770,26 @@
         </div>
       </div>
       
+      <!-- Product 50 -->
+      <div class="product-card" data-category="large bestseller">
+        <span class="product-badge badge-bestseller">BEST SELLER</span>
+        <img src="images/carpet40.jpg" alt="Premium Collection">
+        <div class="product-info">
+          <h3>Premium Collection</h3>
+          <div class="product-size">Size: 200x300 cm</div>
+          <div class="product-price">GH₵ 550</div>
+          <div class="product-rating">⭐⭐⭐⭐⭐ (189 reviews)</div>
+          <div class="product-stock">✓ In Stock</div>
+          <div class="product-colors">
+            <span class="color-dot" style="background: #4B0082;" title="Indigo"></span>
+            <span class="color-dot" style="background: #483D8B;" title="Dark Slate Blue"></span>
+            <span class="color-dot" style="background: #FFD700;" title="Gold"></span>
+          </div>
+          <p>Top tier quality and craftsmanship.</p>
+          <div class="product-actions">
+            <a href="https://wa.me/233263405722?text=Hi, I'm interested in the Premium Collection (200x300 cm) - GH₵ 550" class="whatsapp-order-btn">Order Now</a>
+            <button class="quick-view-btn">Quick View</button>
+          </div>
     </div>
   </section>
 
