--- a/index.html
+++ b/index.html
@@ -1913,7 +1913,7 @@
         <img src="images/whatsapp-icon.png" alt="WhatsApp">
       </a>
       <a href="https://instagram.com/yourpage" target="_blank" class="social-icon" title="Instagram">
-        <img src="images/instagram-icon.png" alt="Instagram">
+        <img src="images/instagram-icon.jpg" alt="Instagram">
       </a>
       <a href="https://facebook.com/yourpage" target="_blank" class="social-icon" title="Facebook">
         <img src="images/facebook-icon.png" alt="Facebook">
